krunner: fix window showing on wrong screen

Call positionOnScreen every time setVisible is set and not just during initialization of View, so that the correct screen can be determined whenever the window is shown, rather than always using the screen that happened to be active the first time KRunner was launched.

BUG: 474166